<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorHomeBackground"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPink">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/refreshIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh"
                    android:contentDescription="@string/img_content"
                    android:onClick="refresh"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_alignParentRight="true" />

                <ImageView
                    android:id="@+id/roomDB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_save"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/img_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_alignParentRight="true" />


            </RelativeLayout>



        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lump"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <RadioGroup
                android:id="@+id/lumpStateRg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                
                <RadioButton
                    android:id="@+id/palpableLump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lump_palpable"/>

                <RadioButton
                    android:id="@+id/non_palpableLump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lump_non_palpable"/>

            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lump_size_palpable"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <RadioGroup
                android:id="@+id/lumpPalpableSizeRg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/size2cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lump_palpable_size1"/>
                <RadioButton
                    android:id="@+id/size2cmTo5cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lump_palpable_size2"/>
                <RadioButton
                    android:id="@+id/size5cmPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lump_palpable_size3"/>


            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lump_size_palpable_attachment"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <RadioGroup
                android:id="@+id/lumpPalpableAttachmentRg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/underMuscle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lump_palpable_attachment1"/>

                <RadioButton
                    android:id="@+id/overMuscle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lump_palpable_attachment2"/>

            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lymph_node"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <RadioGroup
                android:id="@+id/nodeStateRg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/nodeSwollen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lymph_node_state1"/>

                <RadioButton
                    android:id="@+id/nodeNotSwollen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lymph_node_state2"/>

            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lymph_node_state"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <RadioGroup
                android:id="@+id/nodeSwollenPositionRg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/nodeSwollenMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lymph_node_swollen_state1"/>

                <RadioButton
                    android:id="@+id/nodeSwollenFixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lymph_node_swollen_state2"/>

            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distant_spread"
                android:padding="10dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <RadioGroup
                android:id="@+id/tumorSpreadRg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/spreadPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tumor_spread"/>

                <RadioButton
                    android:id="@+id/spreadNegative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tumor_spread2"/>

            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/stageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@color/colorPink"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/btn_stage"
                android:layout_marginEnd="5dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text=""
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>