<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorHomeBackground">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailsBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/img_content"
                />

            <TextView
                android:id="@+id/toolbarPatientDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_details"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="40dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/editDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_create"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/img_content"/>



        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/hint_patients_name"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/patientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_patient_name"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_patients_age"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/agePatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_patient_name"/>

    <TextView
        android:id="@+id/symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_patients_symptoms"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/patientSymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_patient_symptoms"/>

    <TextView
        android:id="@+id/stage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_stage"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/patientStage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

<!--    <NumberPicker-->
<!--        android:id="@+id/Stage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        />-->



</LinearLayout>