<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:background="@color/colorHomeBackground"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/dummyPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_patient_name"
            android:textSize="18sp"
            android:fontFamily="@font/brandon_reg"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dummyStage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_patient_stage"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/brandon_reg"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/dummySymptoms"
            android:layout_below="@id/dummyPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_patient_symptoms"
            android:fontFamily="@font/brandon_reg"
            android:textStyle="bold"
            android:maxLines="1"
            android:maxLength="50"
            android:ellipsize="end"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/testDate"
            android:layout_below="@id/dummyStage"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_patient_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorBlack"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:fontFamily="@font/brandon_reg"/>

<!--        <TextView-->
<!--            android:id="@+id/ageTest"-->
<!--            android:layout_below="@id/testDate"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:text="2"-->
<!--            android:layout_marginTop="10dp"/>-->

    </RelativeLayout>


</androidx.cardview.widget.CardView>