<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHomeBackground"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backArrowHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/img_content"
                />

            <TextView
                android:id="@+id/toolbarAddPatientInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_s_records"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="40dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/deleteAllPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_sweep"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:tooltipText="@string/tool_tip_deleteAll"
                android:contentDescription="@string/img_content"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="70dp"
        android:id="@+id/patientRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/records_recycler_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:src="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>